--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,8 +9,8 @@
   </div>
 
   <nav class="sidebar-nav">
-    <span class="sidebar-nav-item"><a href="https://anchor.fm/therapyaroha" rel="nofollow" target="_blank"
-        title="Compassion-Focused Therapy Podcast">Aroha Podcast</a></span>
+    <span class="sidebar-nav-item"><a href="https://anchor.fm/group-narratives" rel="nofollow" target="_blank"
+        title="Group Narratives Podcast">Group Narratives Podcast</a></span>
     <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
 
     {% comment %}
@@ -28,10 +28,10 @@
     {% endif %}
     {% endfor %}
 
-    <span class="sidebar-nav-item"><a href="https://www.instagram.com/therapyaroha/" rel="nofollow" target="_blank"
-        title="Find me on Instagram">Instagram</a></span>
-    <span class="sidebar-nav-item"><a href="https://twitter.com/therapyaroha" rel="nofollow" target="_blank"
-        title="Find me on Twitter">Twitter</a></span>
+    <span class="sidebar-nav-item"><a href="https://www.instagram.com/groupnarratives/" rel="nofollow" target="_blank"
+        title="Find us on Instagram">Instagram</a></span>
+    <span class="sidebar-nav-item"><a href="https://twitter.com/groupnarratives" rel="nofollow" target="_blank"
+        title="Find us on Twitter">Twitter</a></span>
 
   </nav>
 
