--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 
   <nav class="sidebar-nav">
     <span class="sidebar-nav-item"><a href="https://anchor.fm/group-narratives" rel="nofollow" target="_blank"
-        title="Group Narratives Podcast">Group Narratives Podcast</a></span>
+        title="Group Narratives Podcast">Our Podcast</a></span>
     <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
 
     {% comment %}
